fixed alignment bug

--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,6 @@
 body{
 	background-color: white;
+	min-width:500px;
 }
 
 img{
@@ -20,8 +21,9 @@ iframe{
 }
 
 #zoom{
-	float:right;
 	opacity: 0.1;
+	position: fixed;
+	right: 0;
 }
 
 #zoom_up, #zoom_down{
